@@ -5,6 +5,7 @@ unreleased
 - Removed: MFRC522(byte resetPowerDownPin);
 - Changed default initialisation of SS pin with constants of arduino.h are not done anymore
 - Replaced UINT8_MAX by UNUSED_PIN
+- Replaced default value NULL for pointer with correct nullptr
 - 
 
 22 Mar 2017, v1.3.6
